# discnerd

./: .gitignore  Makefile  README.md  pyproject.toml
discnerd/: cli.py  data.py  plot.py  utils.py
tests/: context_tests.py  testconfig  tests.py
